--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 }
 
 html {
-  font-family: Outfit;
+  font-family: "Outfit", "Times New Roman", serif;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5rem;
